@@ -40,6 +40,7 @@ include examples/plotcities.py
 include examples/plotmap.py
 include examples/plotmap_oo.py
 include examples/plotmap_masked.py
+include examples/plotmap_shaded.py
 include examples/contour_demo.py
 include examples/customticks.py
 include examples/quiver_demo.py
